<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2"
    tools:context=".DatosUsuario">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="800dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="200dp"
            android:background="@drawable/shape_white"
            android:orientation="vertical"
            android:padding="15dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/comfortaa_regular"
                android:gravity="center"
                android:text="@string/ed_datos_usurio"
                android:textColor="@color/black"
                android:textSize="25sp" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nombre_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_tar"
                android:fontFamily="@font/comfortaa_bold"
                android:hint="@string/ed_usuario"
                android:inputType="text"
                android:maxLength="50"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edad_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_tar"
                android:fontFamily="@font/comfortaa_bold"
                android:hint="@string/ed_edad"
                android:inputType="number"
                android:maxLength="3"
                android:padding="15dp"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/telefono_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_tar"
                android:fontFamily="@font/comfortaa_bold"
                android:hint="@string/ed_telefono"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="15dp"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerUsu"
                style="@style/CustomTextSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_tar"
                android:fontFamily="@font/comfortaa_bold"
                android:padding="15dp"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/edit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit1"
                    android:textSize="16sp"
                    android:visibility="visible"
                    app:cornerRadius="10dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/checked"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/check"
                    android:textSize="16sp"
                    app:cornerRadius="10dp" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>