<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/agenda_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_tar"
        android:foregroundGravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_regular"
            android:gravity="center"
            android:text="@string/tv_agenda"
            android:textColor="@color/black"
            android:textSize="25sp" />


        <EditText
            android:id="@+id/nombre_paciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_tar"
            android:fontFamily="@font/comfortaa_bold"
            android:hint="@string/ed_usuario"
            android:inputType="text"
            android:maxLength="35"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edad_paciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_tar"
            android:fontFamily="@font/comfortaa_bold"
            android:hint="@string/ed_edad"
            android:inputType="number"
            android:maxLength="3"
            android:padding="10dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnersex_paciente"
            style="@style/CustomTextSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_tar"
            android:fontFamily="@font/comfortaa_bold"
            android:paddingStart="3dp"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerDepartamento_paciente"
            style="@style/CustomTextSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_tar"
            android:fontFamily="@font/comfortaa_bold"
            android:paddingStart="3dp"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="end"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/checked"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:background="@drawable/baseline_done_24" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
