<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/inicarseccion"
    android:orientation="vertical"
    tools:context=".InicioSesion">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/liner_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="96dp"
            android:background="@drawable/shape_white"
            android:orientation="vertical"
            android:padding="15dp"
            android:visibility="visible">


            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_ini"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_iniciar_sesion"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:background="@drawable/shape_log_bt"
                    android:fontFamily="@font/comfortaa_regular"
                    android:gravity="center"
                    android:text="@string/bt_inicio"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_regis"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/comfortaa_regular"
                    android:gravity="center"
                    android:text="@string/tx_registrarse_2"
                    android:textColor="@color/blue" />

            </LinearLayout>

            <View
                android:layout_width="10dp"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/comfortaa_regular"
                android:gravity="center"
                android:text="@string/tx_hospital"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <View
                android:layout_width="10dp"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/ed_correo"
                android:hint="@string/ed_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:drawableEnd="@drawable/baseline_account_circle_24"
                android:fontFamily="@font/comfortaa_bold"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="18sp"
                android:background="@drawable/shape_ed" />

            <EditText
                android:id="@+id/ed_cont"
                android:hint="@string/ed_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:drawableEnd="@drawable/baseline_visibility_24"
                android:fontFamily="@font/comfortaa_bold"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="18sp"
                android:background="@drawable/shape_ed" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login_1"
                android:layout_width="280dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_log_bt"
                android:fontFamily="@font/comfortaa_regular"
                android:layout_marginBottom="15dp"
                android:text="@string/bt_inicio"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="96dp"
            android:background="@drawable/shape_white"
            android:orientation="vertical"
            android:padding="15dp"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_ini"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_iniciar_1"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:background="@drawable/shape_ini"
                    android:fontFamily="@font/comfortaa_regular"
                    android:gravity="center"
                    android:text="@string/bt_inicio"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/tv_regis_1"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:background="@drawable/shape_log_bt"
                    android:fontFamily="@font/comfortaa_regular"
                    android:gravity="center"
                    android:text="@string/tx_registrarse_2"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/comfortaa_regular"
                android:gravity="center"
                android:text="@string/tx_hospital"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:textSize="25sp" />


            <EditText
                android:id="@+id/ed_correo_2"
                android:hint="@string/ed_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:drawableEnd="@drawable/baseline_account_circle_24"
                android:fontFamily="@font/comfortaa_bold"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="18sp"
                android:background="@drawable/shape_ed"/>

            <EditText
                android:id="@+id/ed_cont_2"
                android:hint="@string/ed_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:drawableEnd="@drawable/baseline_visibility_24"
                android:fontFamily="@font/comfortaa_bold"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="18sp"
                android:background="@drawable/shape_ed"/>

            <EditText
                android:id="@+id/ed_cont_3"
                android:hint="@string/ed_contraseña2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:drawableEnd="@drawable/baseline_visibility_24"
                android:fontFamily="@font/comfortaa_bold"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="18sp"
                android:background="@drawable/shape_ed"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login_2"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_log_bt"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/tx_registrarse_2"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="10dp" />


        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>